--- a/clone-telegram-win11/style.css
+++ b/clone-telegram-win11/style.css
@@ -16,7 +16,7 @@ html {
 body {
   background-image: url("assets/background/bg-win11.png");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: auto;
 }
 
 *,
@@ -83,6 +83,7 @@ ul {
 }
 
 .anyClass {
+  width: 103.5%;
   margin-top: 20px;
   height: 70vh;
   overflow-y: scroll;
@@ -221,11 +222,31 @@ ul {
   color: #ffffff;
   margin-top: 50vh;
 }
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1439px) {
   .main-div {
     display: none;
   }
   .msg-windos-size {
     display: inline;
   }
+}
+.chate-info-box {
+  background: linear-gradient(
+    108.74deg,
+    rgba(0, 0, 0, 0.24) 0%,
+    rgba(68, 68, 68, 0.06) 100%
+  );
+  box-shadow: 0px 0px 50px -25px rgba(0, 0, 0, 0.5);
+  border-bottom: 0.5px solid rgb(71, 71, 71);
+
+  backdrop-filter: blur(100px);
+  align-items: center;
+}
+
+.icon-info-chat {
+  margin-left: 5px;
+}
+.box-chat {
+  background: rgba(58, 58, 58, 0.3);
+  backdrop-filter: blur(100px);
 }
